broidery-backend/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: broidery-backend
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: http
  selector:
    app: broidery-backend
  sessionAffinity: None
  type: LoadBalancer
