broidery-backend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: broidery-backend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    cert-manager.io/issuer: "cluster-issuer-selfsigned" 
    cert-manager.io/issuer-kind: "ClusterIssuer"
    metallb.uniberse.tf/address-pool: default
spec:
  ingressClassName: nginx
  rules:
  - host: broidery-backend.k3s
    http:
      paths:
        - path: /api/add-product
          pathType: Prefix
          backend:
            service:
              name: broidery-backend-canary
              port:
                name: http
        - path: /
          pathType: Prefix
          backend:
            service:
              name: broidery-backend
              port:
                name: http
  tls:
    - hosts:
        - broidery-backend.k3s
      secretName: broidery-backend.k3s.cloud-tls
